@@ -633,6 +633,10 @@ PANOPTICON_SITE_LBL_JUPDATE_ERRORED=The update was scheduled to run automaticall
 PANOPTICON_SITE_LBL_JUPDATE_THE_ERROR_REPORTED_WAS=The error reported was:
 PANOPTICON_SITE_LBL_JUPDATE_ERROR_TRACE=Error trace (for debugging):
 PANOPTICON_SITE_LBL_JUPDATE_SCHEDULE_UPDATE=Schedule Automatic Update to Joomla! %s
+PANOPTICON_SITE_LBL_JUPDATE_UNSCHEDULE_UPDATE=Cancel Automatic Update
+PANOPTICON_SITE_LBL_JUPDATE_UNSCHEDULE_ERR_NOT_SCHEDULED="There is no scheduled update."
+PANOPTICON_SITE_LBL_JUPDATE_UNSCHEDULE_ERR_RUNNING="The scheduled update is already running."
+PANOPTICON_SITE_ERR_JUPDATE_UNSCHEDULE_FAILED="Could not cancel the Joomla core update."
 PANOPTICON_SITE_LBL_JUPDATE_SCHEDULE_CLEAR_ERROR=Clear Error
 PANOPTICON_SITE_LBL_JUPDATE_REFRESH_CORE_PROMPT=Site woes? Try refreshing the Joomla! core files.
 PANOPTICON_SITE_LBL_JUPDATE_BTN_REFRESH_CORE_PROMPT=Schedule Joomla! %s Files Refresh
